--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-  <TextView
-      android:text="@string/hello_world"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"/>
+  <ImageView
+      android:id="@+id/iv_flower"
+      android:layout_width="100dp"
+      android:layout_height="100dp"/>
 
 </RelativeLayout>
